--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+*{
+  box-sizing: border-box;
+}
+
+
 h1 {
   color: black;
   font-family: 'Arvo', serif;
 }
 
 h1{
-font-size: 40px;
+font-size: 30px;
 font-style: italic;
 }
 
@@ -36,68 +41,74 @@ p {
 
 .datum {
   font-size: 12px;
-  font-family: "Arial";
+  font-family: "Arial black";
   font-weight: 800;
-  color: #494949;
+  color: #c5131a;
+  margin-top: 0px;
 }
 
 
 .header {
   text-align: center;
   border: 4px;
+
+}
+
+.header img{
+max-width: 100%;
+
 }
 
 .outer {
   display: flex;
   justify-content: center;
+  background-color: #fcfcfc;
+  margin-bottom: 30px;
 }
 
 .outer2 {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+}
+
+.bottom{
+  background-color: grey;
 }
 
 .senaste {
-  border-left: 0px solid #d3d3d3;
-  border-right: 0px solid #d3d3d3;
+  border: 0px solid #dfdfdf;
   border-radius: 0px;
   padding: 20px;
   margin: 20px;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
   width: 400px;
-  box-shadow: 0px 0px 10px #ffffff;
+  box-shadow: 0px 0px 0px #ffffff;
 }
 
 .senaste img {
   border: 0px solid #dfdfdf;
-  padding: 4px;
   margin-right: 10px;
   height: 75px;
 }
 
 .perforetag {
-    border: 0px solid #d3d3d3;
+    border-left: 1px solid #d3d3d3;
     border-radius: 0px;
     padding: 5px;
-    margin: 5px;
     background-color: #ffffff;
-    width: 400px;
+    width: 20%;
     box-shadow: 0px 0px 10px #ffffff;
   }
 
 
-  .perforetag img {
-    border: 1px solid #dfdfdf;
-    padding: 4px;
-    margin-right: 10px;
-    height: 35px;
-
-}
 .nyhet {
     display: flex;
     justify-content: center;
     margin: 10px;
-    background-color: #ececec;
+    padding: 10px;
+    background-color: #fff;
+    border-bottom: 0px solid #dfdfdf;
 
   }
 
@@ -106,13 +117,14 @@ p {
 
 }
 
-}
-
 .nyhet p2 {
 padding-left: 5px;
 
 }
 
+.perforetag:last-child {
+  border-right: 1px solid #d3d3d3;
+}
 
 .rubrik {
   width: 100%;
@@ -122,5 +134,49 @@ padding-left: 5px;
 
 .puffbild {
   width: 100%;
+
+}
+
+
+
+@media (max-width: 768px) {
+.outer {
+  display: block;
+  padding: 20px;
+
+}
+
+.outer2 {
+  padding: 20px;
+}
+
+.senaste{
+  width: 100%;
+  margin: 0px;
+  margin-top: 20px;
+
+}
+
+.perforetag {
+    width: 50%;
+    border-left: 1px solid #d3d3d3;
+    border-right: 1px solid #d3d3d3;
+    margin-top: 20px;
+
+  }
+  .datum {
+    font-size: 10px;
+  }
+
+  h3{
+  font-size: 20px;
+  font-family: 'Arvo', serif;
+  font-weight: 800;
+  color: #494949;
+  margin: 0 10px;
+  }
+
+
+@media (min-width: 769px) and (max-width: 1024px) {
 
 }
