--- a/style.css
+++ b/style.css
@@ -59,6 +59,24 @@ max-width: 100%;
 
 }
 
+.meny {
+  display: flex;
+  justify-content: center;
+  background-color: #fcfcfc;
+  margin-bottom: 30px;
+  font-family: Arial;
+}
+
+.meny p{
+  font-family: Arial;
+  margin: 15px;
+}
+
+.link{
+  font-family: Arial;
+  margin: 15px;
+}
+
 .outer {
   display: flex;
   justify-content: center;
