--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ max-width: 100%;
   background-color: #fcfcfc;
   margin-bottom: 30px;
   font-family: Arial;
+  text-decoration: none;
 }
 
 
@@ -91,20 +92,28 @@ max-width: 100%;
   background-color: grey;
 }
 
+
+.datumrubrik {
+  width: 100%;
+}
+
+
+
 .senaste {
   border: 0px solid #dfdfdf;
   border-radius: 0px;
   padding: 20px;
   margin: 20px;
   background-color: #f7f7f7;
-  width: 400px;
+  width: 45%;
   box-shadow: 0px 0px 0px #ffffff;
 }
 
 .senaste img {
   border: 0px solid #dfdfdf;
   margin-right: 10px;
-  height: 75px;
+  max-width: 100px;
+  align-self: center;
 }
 
 .perforetag {
@@ -124,6 +133,9 @@ max-width: 100%;
     padding: 10px;
     background-color: #fff;
     border-bottom: 0px solid #dfdfdf;
+    text-decoration: none;
+    color: black;
+    align-self: center;
 
   }
 
