--- a/style.css
+++ b/style.css
@@ -68,6 +68,15 @@ max-width: 100%;
   text-decoration: none;
 }
 
+a{
+  text-decoration: none;
+  color: grey;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: black;
+}
 
 
 .link {
@@ -136,8 +145,15 @@ max-width: 100%;
     text-decoration: none;
     color: black;
     align-self: center;
-
   }
+
+  .nyhet:hover {
+    text-decoration: none;
+    border-top: 1px solid #000000;
+    border-bottom: 1px solid #000000;
+    border-left: 1px solid #000000;
+    border-right: 1px solid #000000;
+}
 
 .nyhet p {
   padding-left: 5px;
