--- a/style.css
+++ b/style.css
@@ -141,16 +141,20 @@ a:hover {
     margin: 10px;
     padding: 10px;
     background-color: #fff;
-    border-bottom: 0px solid #dfdfdf;
-    text-decoration: none;
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    border-left: 1px solid #fff;
+    border-right: 1px solid #fff;    text-decoration: none;
     color: black;
     align-self: center;
   }
 
   .nyhet:hover {
     text-decoration: none;
-    color: white;
-    background-color: #f8f8f8;
+    border-top: 1px solid #cdcdcd;
+    border-bottom: 1px solid #cdcdcd;
+    border-left: 1px solid #cdcdcd;
+    border-right: 1px solid #cdcdcd;
 }
 
 .nyhet p {
