--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ a:hover {
   border-radius: 0px;
   padding: 20px;
   margin: 20px;
-  background-color: #f7f7f7;
+  background-color: #eee;
   width: 45%;
   box-shadow: 0px 0px 0px #ffffff;
 
@@ -162,10 +162,10 @@ a:hover {
     margin: 10px;
     padding: 20px;
     background-color: #fff;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
+    border-top: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    border-left: 2px solid #fff;
+    border-right: 2px solid #fff;
     text-decoration: none;
     color: black;
     align-self: center;
@@ -173,10 +173,11 @@ a:hover {
 
   .nyhet:hover {
     text-decoration: none;
-    border-top: 1px solid #cdcdcd;
-    border-bottom: 1px solid #cdcdcd;
-    border-left: 1px solid #cdcdcd;
-    border-right: 1px solid #cdcdcd;
+    border-top: 2px solid #cdcdcd;
+    border-bottom: 2px solid #cdcdcd;
+    border-left: 2px solid #cdcdcd;
+    border-right: 2px solid #cdcdcd;
+
 }
 
 .nyhet p {
